# audit-userspace

./: .gitignore  CMakeLists.txt
src/: Makefile.am  auditd-event.c  auditd.c  linklist.c  linklist.h  read_audit.c  read_audit.h  syscall.c  syscall.h
