cmake_minimum_required(VERSION 3.15)
project(audit_userspace C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(audisp)
include_directories(audisp/plugins/ids)
include_directories(audisp/plugins/remote)
include_directories(audisp/plugins/zos-remote)
include_directories(auparse)
include_directories(common)
include_directories(lib)
include_directories(src)
include_directories(src/libev)
include_directories(tools/aulast)
include_directories(tools/aulastlog)
include_directories(tools/auvirt)

add_executable(audit_userspace
        audisp/plugins/ids/account.c
        audisp/plugins/ids/account.h
        audisp/plugins/ids/avl.c
        audisp/plugins/ids/avl.h
        audisp/plugins/ids/gcc-attributes.h
        audisp/plugins/ids/ids.c
        audisp/plugins/ids/ids.h
        audisp/plugins/ids/ids_config.c
        audisp/plugins/ids/ids_config.h
        audisp/plugins/ids/model_bad_event.c
        audisp/plugins/ids/model_bad_event.h
        audisp/plugins/ids/model_behavior.c
        audisp/plugins/ids/model_behavior.h
        audisp/plugins/ids/nvpair.c
        audisp/plugins/ids/nvpair.h
        audisp/plugins/ids/origin.c
        audisp/plugins/ids/origin.h
        audisp/plugins/ids/reactions.c
        audisp/plugins/ids/reactions.h
        audisp/plugins/ids/session.c
        audisp/plugins/ids/session.h
        audisp/plugins/ids/timer-services.c
        audisp/plugins/ids/timer-services.h
        audisp/plugins/remote/audisp-remote.c
        audisp/plugins/remote/queue.c
        audisp/plugins/remote/queue.h
        audisp/plugins/remote/remote-config.c
        audisp/plugins/remote/remote-config.h
        audisp/plugins/remote/test-queue.c
        audisp/plugins/statsd/audisp-statsd.c
        audisp/plugins/syslog/audisp-syslog.c
        audisp/plugins/zos-remote/zos-remote-config.c
        audisp/plugins/zos-remote/zos-remote-config.h
        audisp/plugins/zos-remote/zos-remote-ldap.c
        audisp/plugins/zos-remote/zos-remote-ldap.h
        audisp/plugins/zos-remote/zos-remote-log.c
        audisp/plugins/zos-remote/zos-remote-log.h
        audisp/plugins/zos-remote/zos-remote-plugin.c
        audisp/plugins/zos-remote/zos-remote-queue.c
        audisp/plugins/zos-remote/zos-remote-queue.h
        audisp/audispd-builtins.c
        audisp/audispd-builtins.h
        audisp/audispd-config.h
        audisp/audispd-llist.c
        audisp/audispd-llist.h
        audisp/audispd-pconfig.c
        audisp/audispd-pconfig.h
        audisp/audispd.c
        audisp/libdisp.h
        audisp/queue.c
        audisp/queue.h
        auparse/test/auparse_test.c
        auparse/test/auparselol_test.c
        auparse/test/lookup_test.c
        auparse/accesstab.h
        auparse/auditd-config.c
        auparse/auparse-defs.h
        auparse/auparse-idata.h
        auparse/auparse.c
        auparse/auparse.h
        auparse/bpftab.h
        auparse/captab.h
        auparse/clocktab.h
        auparse/clone-flagtab.h
        auparse/data_buf.c
        auparse/data_buf.h
        auparse/ellist.c
        auparse/ellist.h
        auparse/epoll_ctl.h
        auparse/expression.c
        auparse/expression.h
        auparse/famtab.h
        auparse/fcntl-cmdtab.h
        auparse/flagtab.h
        auparse/icmptypetab.h
        auparse/inethooktab.h
        auparse/internal.h
        auparse/interpret.c
        auparse/interpret.h
        auparse/ioctlreqtab.h
        auparse/ip6optnametab.h
        auparse/ipccmdtab.h
        auparse/ipctab.h
        auparse/ipoptnametab.h
        auparse/lru.c
        auparse/lru.h
        auparse/message.c
        auparse/mmaptab.h
        auparse/mounttab.h
        auparse/netactiontab.h
        auparse/nfprototab.h
        auparse/normalize-internal.h
        auparse/normalize-llist.c
        auparse/normalize-llist.h
        auparse/normalize.c
        auparse/normalize_evtypetab.h
        auparse/normalize_obj_kind_map.h
        auparse/normalize_record_map.h
        auparse/normalize_syscall_map.h
        auparse/nvlist.c
        auparse/nvlist.h
        auparse/open-flagtab.h
        auparse/persontab.h
        auparse/pktoptnametab.h
        auparse/prctl-opt-tab.h
        auparse/private.h
        auparse/prottab.h
        auparse/ptracetab.h
        auparse/recvtab.h
        auparse/rlimittab.h
        auparse/rnode.h
        auparse/schedtab.h
        auparse/seccomptab.h
        auparse/seektab.h
        auparse/shm_modetab.h
        auparse/signaltab.h
        auparse/sockleveltab.h
        auparse/sockoptnametab.h
        auparse/socktab.h
        auparse/socktypetab.h
        auparse/tcpoptnametab.h
        auparse/tty_named_keys.h
        auparse/typetab.h
        auparse/umounttab.h
        bindings/python/auparse_python.c
        bindings/swig/src/auditswig.i
        common/audit-fgets.c
        common/common.h
        common/strsplit.c
        contrib/plugin/audisp-example.c
        lib/test/lookup_test.c
        lib/aarch64_table.h
        lib/actiontab.h
        lib/arm_table.h
        lib/audit_logging.c
        lib/deprecated.c
        lib/dso.h
        lib/errormsg.h
        lib/errtab.h
        lib/fieldtab.h
        lib/flagtab.h
        lib/fstypetab.h
        lib/ftypetab.h
        lib/gen_tables.c
        lib/gen_tables.h
        lib/i386_table.h
        lib/libaudit.c
        lib/libaudit.h
        lib/lookup_table.c
        lib/machinetab.h
        lib/message.c
        lib/msg_typetab.h
        lib/netlink.c
        lib/optab.h
        lib/ppc_table.h
        lib/private.h
        lib/s390_table.h
        lib/s390x_table.h
        lib/x86_64_table.h
        src/libev/ev.c
        src/libev/ev.h
        src/libev/ev_epoll.c
        src/libev/ev_iouring.c
        src/libev/ev_linuxaio.c
        src/libev/ev_poll.c
        src/libev/ev_select.c
        src/libev/ev_vars.h
        src/libev/ev_wrap.h
        src/libev/event.c
        src/libev/event.h
        src/test/ilist_test.c
        src/test/slist_test.c
        src/auditctl-listing.c
        src/auditctl-listing.h
        src/auditctl-llist.c
        src/auditctl-llist.h
        src/auditctl.c
        src/auditd-config.c
        src/auditd-config.h
        src/auditd-dispatch.c
        src/auditd-dispatch.h
        src/auditd-event.c
        src/auditd-event.h
        src/auditd-listen.c
        src/auditd-listen.h
        src/auditd-reconfig.c
        src/auditd-sendmail.c
        src/auditd.c
        src/aureport-options.c
        src/aureport-options.h
        src/aureport-output.c
        src/aureport-scan.c
        src/aureport-scan.h
        src/aureport.c
        src/ausearch-avc.c
        src/ausearch-avc.h
        src/ausearch-checkpt.c
        src/ausearch-checkpt.h
        src/ausearch-common.h
        src/ausearch-int.c
        src/ausearch-int.h
        src/ausearch-llist.c
        src/ausearch-llist.h
        src/ausearch-lol.c
        src/ausearch-lol.h
        src/ausearch-lookup.c
        src/ausearch-lookup.h
        src/ausearch-match.c
        src/ausearch-nvpair.c
        src/ausearch-nvpair.h
        src/ausearch-options.c
        src/ausearch-options.h
        src/ausearch-parse.c
        src/ausearch-parse.h
        src/ausearch-report.c
        src/ausearch-string.c
        src/ausearch-string.h
        src/ausearch-time.c
        src/ausearch-time.h
        src/ausearch.c
        src/autrace.c
        src/delete_all.c
        tools/aulast/aulast-llist.c
        tools/aulast/aulast-llist.h
        tools/aulast/aulast.c
        tools/aulastlog/aulastlog-llist.c
        tools/aulastlog/aulastlog-llist.h
        tools/aulastlog/aulastlog.c
        tools/ausyscall/ausyscall.c
        tools/auvirt/auvirt-list.c
        tools/auvirt/auvirt-list.h
        tools/auvirt/auvirt.c)
